fix <xmp>, <plaintext>, <script> regressions
svn path=/trunk/kdelibs/; revision=124938

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -422,7 +422,9 @@ SAMP {
 	font-family: monospace; 
 }
       
-PRE { 
+PRE,
+XMP, 
+PLAINTEXT { 
 	display: block;
 	font-family: monospace; 
 	white-space: pre; 
