Implement media support for the default style sheet and use by default 2cm margins when printing.
svn path=/trunk/kdelibs/; revision=128049

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -44,10 +44,19 @@ script {
  * generic block level elements
  */
 
-body {
-	display: block;
-	margin: 10px;
-} 
+@media print {
+	body {
+		display: block;
+		margin: 2cm;
+	}
+}
+
+@media screen {
+	body {
+		display: block;
+		margin: 10px;
+	}
+}
 
 p {
 	display: block;
