no line wrapping for XMP, PLAINTEXT etc
svn path=/trunk/kdelibs/; revision=129746

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -438,6 +438,7 @@ PLAINTEXT {
 	display: block;
 	font-family: monospace; 
 	white-space: pre; 
+        -konq-wrap-mode: -konq-none;
 }
       
 BIG { 
