getting rid of -konq-wrap-mode, braindead code duplication of CSS2 white-space
svn path=/trunk/kdelibs/; revision=130479

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -438,7 +438,6 @@ PLAINTEXT {
 	display: block;
 	font-family: monospace; 
 	white-space: pre; 
-        -konq-wrap-mode: -konq-none;
 }
       
 BIG { 
@@ -531,11 +530,11 @@ frame {
 
 nobr {
         display: block;
-        -konq-wrap-mode: -konq-none;
+        white-space: nowrap; 
 }
 
 wbr {
-        -konq-wrap-mode: -konq-normal;
+        white-space: normal;
 }
 
 /* noscript is handled internally, as it depends on the html settings */
