--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -536,6 +536,11 @@ wbr {
         white-space: normal;
 }
 
+marquee {
+        display: none;
+}
+
+
 /* noscript is handled internally, as it depends on the html settings */
 
 /* media rules are commented out for the moment. We'll have to add
