fix some text align problems that came up with the justify handling.
svn path=/trunk/kdelibs/; revision=135821

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -201,6 +201,7 @@ TABLE {
 	display: table;
 	border-collapse: separate;
 	vertical-align: middle;
+	text-align: -konq-auto;
 	border-spacing: 2px;
 	padding: 1px;
         -konq-flow-mode: -konq-around-floats;
